// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Phone field metadata tests suite It should fail to create phone field with conflicting additional phone country and calling code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO conflicting country code and calling code",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with conflicting additional phone number calling code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO conficting callingCode",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with conflicting additional phone number country code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO conflicting countryCode",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with conflicting country code and calling code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO conflicting country code and calling code",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with conflicting phone number calling code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO conficting callingCode",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with conflicting phone number country code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO conflicting countryCode",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with invalid additional phone calling code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO invalid country calling code",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with invalid additional phone country code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TOOD invalid country code",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with invalid calling code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO invalid country calling code",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with invalid country code 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TOOD invalid country code",
  },
]
`;

exports[`Phone field metadata tests suite It should fail to create phone field with number only 1`] = `
[
  {
    "extensions": {
      "code": "INTERNAL_SERVER_ERROR",
      "exceptionEventId": "mocked-exception-id",
    },
    "message": "TODO conflicting countryCode",
  },
]
`;
